force-app/main/default/objects/Additional_Dog_Present__c/Additional_Dog_Present__c.object-meta.xml
<CustomObject>
    <label>Additional Dog Present</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Additional Dog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Dogs Present</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>