force-app/main/default/objects/Additional_Dog_Present__c/fields/Additional_Dog__c.field-meta.xml
<CustomField>
    <fullName>Additional_Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Dog</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Animal__c.Potential_Helper_Dog__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Additional Dogs Present</relationshipLabel>
    <relationshipName>Additional_Dogs_Present</relationshipName>
    <type>Lookup</type>
</CustomField>