force-app/main/default/objects/Additional_Dog_Present__c/fields/Session_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Session_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Protocol</label>
    <referenceTo>Session_Protocol__c</referenceTo>
    <relationshipLabel>Additional Dogs Present</relationshipLabel>
    <relationshipName>Additional_Dogs_Present</relationshipName>
    <type>Lookup</type>
</CustomField>