force-app/main/default/objects/Additional_Dog_Present__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Additional Dogs Present</relationshipLabel>
    <relationshipName>Additional_Dogs_Present</relationshipName>
    <type>Lookup</type>
</CustomField>